// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check-model-availability - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "**TROUBLESHOOTING SKILL** - Check regional availability of AI models in Microsoft Foundry (Azure AI Foundry / Azure OpenAI).
USE FOR: model availability, "is model available", "which regions have", model not found, model not supported, region support, deploy model to region, SKU not available, version not available, capacity check, "can I deploy", model rollout, regional availability, compare regions, "in what regions can I deploy", "where can I deploy".
DO NOT USE FOR: deploying models (use microsoft-foundry), rate limiting/429 errors (use diagnose-429-errors), quota increase requests (use diagnose-429-errors), authentication errors (use microsoft-foundry rbac).
INVOKES: Capacity discovery scripts from models/deploy-model/capacity, MCP tools for quick checks.
FOR CLI USERS: Uses shared scripts; CLI fallback documented for each step.
",
  "extractedKeywords": [
    "authentication",
    "availability",
    "available",
    "azure",
    "capacity",
    "check",
    "checks",
    "cli",
    "compare",
    "deploy",
    "deploy-model",
    "deploying",
    "diagnose-429-errors",
    "diagnostic",
    "discovery",
    "documented",
    "each",
    "errors",
    "fallback",
    "found",
    "foundry",
    "from",
    "have",
    "increase",
    "invokes",
    "limiting",
    "mcp",
    "microsoft",
    "microsoft-foundry",
    "model",
    "models",
    "openai",
    "quick",
    "quota",
    "rate",
    "rbac",
    "region",
    "regional",
    "regions",
    "requests",
    "rollout",
    "scripts",
    "shared",
    "skill",
    "step",
    "support",
    "supported",
    "tools",
    "troubleshooting",
    "users",
    "uses",
    "validation",
    "version",
    "what",
    "where",
    "which",
  ],
  "name": "check-model-availability",
}
`;

exports[`check-model-availability - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "authentication",
  "availability",
  "available",
  "azure",
  "capacity",
  "check",
  "checks",
  "cli",
  "compare",
  "deploy",
  "deploy-model",
  "deploying",
  "diagnose-429-errors",
  "diagnostic",
  "discovery",
  "documented",
  "each",
  "errors",
  "fallback",
  "found",
  "foundry",
  "from",
  "have",
  "increase",
  "invokes",
  "limiting",
  "mcp",
  "microsoft",
  "microsoft-foundry",
  "model",
  "models",
  "openai",
  "quick",
  "quota",
  "rate",
  "rbac",
  "region",
  "regional",
  "regions",
  "requests",
  "rollout",
  "scripts",
  "shared",
  "skill",
  "step",
  "support",
  "supported",
  "tools",
  "troubleshooting",
  "users",
  "uses",
  "validation",
  "version",
  "what",
  "where",
  "which",
]
`;
